--- a/009.ipynb
+++ b/009.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true
+      "gpuType": "T4"
     },
     "kernelspec": {
       "name": "python3",
@@ -12,7 +12,8 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -26,9 +27,190 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import tensorflow as tf\n",
+        "from tensorflow.keras import layers, models\n",
+        "import matplotlib.pyplot as plt"
+      ],
       "metadata": {
         "id": "a6aKsHS8h60P"
+      },
+      "execution_count": 69,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "(x_train, y_train), (x_test, y_test) = tf.keras.datasets.cifar10.load_data()\n",
+        "\n",
+        "# Normalize to 0–1\n",
+        "x_train = x_train.astype(\"float32\") / 255.0\n",
+        "x_test = x_test.astype(\"float32\") / 255.0"
+      ],
+      "metadata": {
+        "id": "6_SigroDj96r"
+      },
+      "execution_count": 70,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model = models.Sequential([\n",
+        "    layers.Conv2D(32, (3, 3), activation='relu', padding='same', input_shape=(32, 32, 3)),\n",
+        "    layers.Conv2D(32, (3, 3), activation='relu', padding='same'),\n",
+        "    layers.MaxPooling2D((2, 2)),\n",
+        "    layers.Dropout(0.25),\n",
+        "\n",
+        "    layers.Conv2D(64, (3, 3), activation='relu', padding='same'),\n",
+        "    layers.Conv2D(64, (3, 3), activation='relu', padding='same'),\n",
+        "    layers.MaxPooling2D((2, 2)),\n",
+        "    layers.Dropout(0.25),\n",
+        "\n",
+        "    layers.Conv2D(128, (3, 3), activation='relu', padding='same'),\n",
+        "    layers.Conv2D(128, (3, 3), activation='relu', padding='same'),\n",
+        "    layers.MaxPooling2D((2, 2)),\n",
+        "    layers.Dropout(0.25),\n",
+        "\n",
+        "    layers.Flatten(),\n",
+        "    layers.Dense(256, activation='relu'),\n",
+        "    layers.Dropout(0.5),\n",
+        "    layers.Dense(10, activation='softmax')\n",
+        "])"
+      ],
+      "metadata": {
+        "id": "P8FchUAZkDPA"
+      },
+      "execution_count": 71,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.compile(\n",
+        "    optimizer='adam',\n",
+        "    loss='sparse_categorical_crossentropy',\n",
+        "    metrics=['accuracy']\n",
+        ")"
+      ],
+      "metadata": {
+        "id": "467Bg80dkHcy"
+      },
+      "execution_count": 72,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "history = model.fit(\n",
+        "    x_train, y_train,\n",
+        "    epochs=20,\n",
+        "    batch_size=64,\n",
+        "    validation_split=0.2\n",
+        ")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jVq1sRZlkLXf",
+        "outputId": "21e56153-c627-438e-c8e0-c361abf06765"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/20\n",
+            "\u001b[1m625/625\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m13s\u001b[0m 11ms/step - accuracy: 0.2601 - loss: 1.9770 - val_accuracy: 0.5098 - val_loss: 1.3145\n",
+            "Epoch 2/20\n",
+            "\u001b[1m625/625\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 8ms/step - accuracy: 0.5128 - loss: 1.3460 - val_accuracy: 0.6242 - val_loss: 1.0525\n",
+            "Epoch 3/20\n",
+            "\u001b[1m555/625\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m━━━\u001b[0m \u001b[1m0s\u001b[0m 8ms/step - accuracy: 0.5981 - loss: 1.1304"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "test_loss, test_acc = model.evaluate(x_test, y_test)\n",
+        "print(\"Test Accuracy:\", test_acc)"
+      ],
+      "metadata": {
+        "id": "Pz06fp3ZkOtk"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.save(\"cifar10_cnn.h5\")"
+      ],
+      "metadata": {
+        "id": "XQ2YuZAQkSA9"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# External Upload"
+      ],
+      "metadata": {
+        "id": "FVAeGufPkVms"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "from tensorflow.keras.preprocessing import image\n",
+        "from tensorflow.keras.models import load_model\n",
+        "\n",
+        "# Load model\n",
+        "model = load_model(\"cifar10_cnn.h5\")\n",
+        "\n",
+        "# CIFAR-10 class names\n",
+        "class_names = [\n",
+        "    \"airplane\", \"automobile\", \"bird\", \"cat\", \"deer\",\n",
+        "    \"dog\", \"frog\", \"horse\", \"ship\", \"truck\"\n",
+        "]\n",
+        "\n",
+        "def predict_external_image(img_path):\n",
+        "    # Load image and resize to CIFAR-10 (32×32)\n",
+        "    img = image.load_img(img_path, target_size=(32, 32))\n",
+        "    img_array = image.img_to_array(img)\n",
+        "\n",
+        "    # Normalize\n",
+        "    img_array = img_array.astype(\"float32\") / 255.0\n",
+        "\n",
+        "    # Add batch dimension\n",
+        "    img_array = np.expand_dims(img_array, axis=0)\n",
+        "\n",
+        "    # Show image\n",
+        "    plt.imshow(img)\n",
+        "    plt.title(\"Input Image\")\n",
+        "    plt.axis(\"off\")\n",
+        "    plt.show()\n",
+        "\n",
+        "    # Prediction\n",
+        "    prediction = model.predict(img_array)\n",
+        "    class_id = np.argmax(prediction)\n",
+        "    class_name = class_names[class_id]\n",
+        "\n",
+        "    print(\"Predicted Class:\", class_name)\n",
+        "    return class_name\n",
+        "\n",
+        "# Example\n",
+        "predict_external_image(\"013.png\")\n"
+      ],
+      "metadata": {
+        "id": "4zds45gVkin6"
       },
       "execution_count": null,
       "outputs": []
